...
        android:text="News Hub"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="75sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/headlineEditText"
        android:layout_above="@+id/trendingNewsButton"
        android:hint="Enter Headline phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_blue_bright"
...
