...
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/headlineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="News about "
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
...
